update labels and messages
Former-commit-id: edf2ed987c500c9ec3c1c47e5e0e05717f71feb3

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -276,15 +276,15 @@ ViewItem_ssrnRemovingProblem = Publikation konnte nicht aus der Vorschlagsliste 
 #
 # ViewItemOverview
 #
-ViewItemOverview_noAbstractAvailable = [NEW] Es sind keine Zusammenfassungen verf\u00FCgbar
+ViewItemOverview_noAbstractAvailable = Es ist keine Zusammenfassung verf\u00FCgbar
 
-ViewItemOverview_noExternalResourcesAvailable = [NEW] Es sind keine Externen Ressourcen verf\u00FCgbar
+ViewItemOverview_noExternalResourcesAvailable = Es sind keine Externen Ressourcen verf\u00FCgbar
 
-ViewItemOverview_noFulttextsAvailable = [NEW] Es sind keine Volltexte verf\u00FCgbar
+ViewItemOverview_noFulttextsAvailable = Es sind keine frei zug\u00E4nglichen Volltexte verf\u00FCgbar
 
-ViewItemOverview_noMpgAuthorsAvailable = [NEW] Es sind keine MPG-Autoren in der Publikation vorhanden
+ViewItemOverview_noMpgAuthorsAvailable = Es sind keine MPG-Autoren in der Publikation vorhanden
 
-ViewItemOverview_noSupplementaryMaterialAvailable = [NEW] Es sind keine Erg\u00E4nzenden Materialien verf\u00FCgbar
+ViewItemOverview_noSupplementaryMaterialAvailable = Es sind keine frei zug\u00E4nglichen Erg\u00E4nzenden Materialien verf\u00FCgbar
 
 
 
