--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -282,15 +282,15 @@ ViewItem_ssrnRemovingProblem = Publication couldn't be removed from the SSRN sug
 #
 # ViewItemOverview
 #
-ViewItemOverview_noAbstractAvailable = [NEW] There is no abstract available
+ViewItemOverview_noAbstractAvailable = There is no abstract available
 
-ViewItemOverview_noExternalResourcesAvailable = [NEW] There is no external resource available
+ViewItemOverview_noExternalResourcesAvailable = There are no locators available
 
-ViewItemOverview_noFulttextsAvailable = [NEW] There is no fulltext available
+ViewItemOverview_noFulttextsAvailable = There are no public fulltexts available
 
-ViewItemOverview_noMpgAuthorsAvailable = [NEW] There are no MPG-Authors available
+ViewItemOverview_noMpgAuthorsAvailable = There are no MPG-Authors available
 
-ViewItemOverview_noSupplementaryMaterialAvailable = [NEW] There is no supplementary material available
+ViewItemOverview_noSupplementaryMaterialAvailable = There is no public supplementary material available
 
 
 #
