--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1153,37 +1153,37 @@ UserAccountOptions_lblRepeatNewPassword = Passwort wiederholen
 #
 viewItemOverviewPage = Datensatz \u00DCbersicht
 
-ViewItemOverview_lblMpgAuthorsSection = [NEW] MPG-Autoren
+ViewItemOverview_lblMpgAuthorsSection = MPG-Autoren
 
-ViewItemOverview_lblAbstractSection = [NEW] Zusammenfassung
+ViewItemOverview_lblAbstractSection = Zusammenfassung
 
-ViewItemOverview_lblCitationSection = [NEW] Zitation
+ViewItemOverview_lblCitationSection = Zitation
 
-ViewItemOverview_lblExternalResourceSection = [NEW] Externe Ressourcen
+ViewItemOverview_lblExternalResourceSection = Externe Ressourcen
 
-ViewItemOverview_lblFulltextSection = [NEW] Volltexte
+ViewItemOverview_lblFulltextSection = Volltexte (frei zug\u00E4nglich)
 
-ViewItemOverview_lblSupplementaryMaterialSection = [NEW] Erg\u00E4nzendes Material
+ViewItemOverview_lblSupplementaryMaterialSection = Erg\u00E4nzendes Material (frei zug\u00E4nglich)
 
-ViewItemOverview_lblLinkOverviewPage = [NEW] \u00DCbersicht
+ViewItemOverview_lblLinkOverviewPage = \u00DCbersicht
 
-ViewItemOverview_lblCiteAs = [NEW] Zitierlink
+ViewItemOverview_lblCiteAs = Zitierlink
 
-ViewItemOverview_lblGenreGroup_book = [NEW] Geschlossenes Werk
+ViewItemOverview_lblGenreGroup_book = Abgeschlossenes Werk
 
-ViewItemOverview_lblGenreGroup_part_of_book = [NEW] Teil eines geschlossenen Werks
+ViewItemOverview_lblGenreGroup_part_of_book = Teil eines abgeschlossenen Werks
 
-ViewItemOverview_lblGenreGroup_presentation_or_teaching = [NEW] Pr\u00E4sentation/Lehrmaterial
+ViewItemOverview_lblGenreGroup_presentation_or_teaching = Pr\u00E4sentation\u002FLehrmaterial
 
-ViewItemOverview_lblGenreGroup_legal_stuff = [NEW] Juristisches Zeug
+ViewItemOverview_lblGenreGroup_legal_stuff = Juristische Publikation
 
-ViewItemOverview_lblGenreGroup_series_or_journal = [NEW] Reihe/Journal
+ViewItemOverview_lblGenreGroup_series_or_journal = Reihe\u002FJournal
 
-ViewItemOverview_lblGenreGroup_article = [NEW] Artikel
+ViewItemOverview_lblGenreGroup_article = Artikel
 
-ViewItemOverview_lblGenreGroup_paper = [NEW] Kurzes eigentst\u00E4ndiges Werk
+ViewItemOverview_lblGenreGroup_paper = Kurzes eigentst\u00E4ndiges Werk
 
-ViewItemOverview_lblGenreGroup_other = [NEW] Sonstiges
+ViewItemOverview_lblGenreGroup_other = Sonstiges
 
 #
 # ViewItemFull
