--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -1139,23 +1139,39 @@ UserAccountOptions_lblRepeatNewPassword = Repeat password
 #
 # ViewItemOverview
 #
-viewItemOverviewPage = Item Overview
+viewItemOverviewPage = Item Summary
 
-ViewItemOverview_lblMpgAuthorsSection = [NEW] MPG-Authors
+ViewItemOverview_lblMpgAuthorsSection = MPG-Authors
 
-ViewItemOverview_lblAbstractSection = [NEW] Abstract
+ViewItemOverview_lblAbstractSection = Abstract
 
-ViewItemOverview_lblCitationSection = [NEW] Citation
+ViewItemOverview_lblCitationSection = Citation
 
-ViewItemOverview_lblExternalResourceSection = [NEW] External Resource
+ViewItemOverview_lblExternalResourceSection = Locator
 
-ViewItemOverview_lblFulltextSection = [NEW] Fulltext
+ViewItemOverview_lblFulltextSection = Fulltext (public)
 
-ViewItemOverview_lblSupplementaryMaterialSection = [NEW] Supplementary Material
+ViewItemOverview_lblSupplementaryMaterialSection = Supplementary Material (public)
 
-ViewItemOverview_lblLinkOverviewPage = [NEW] Overview
+ViewItemOverview_lblLinkOverviewPage = Summary
 
-ViewItemOverview_lblCiteAs = [NEW] Cite as
+ViewItemOverview_lblCiteAs = Cite as
+
+ViewItemOverview_lblGenreGroup_book = Book
+
+ViewItemOverview_lblGenreGroup_part_of_book = Part of book
+
+ViewItemOverview_lblGenreGroup_presentation_or_teaching = Presentation\u002FTeaching
+
+ViewItemOverview_lblGenreGroup_legal_stuff = Legal publication
+
+ViewItemOverview_lblGenreGroup_series_or_journal = Series\u002FJournal
+
+ViewItemOverview_lblGenreGroup_article = Article
+
+ViewItemOverview_lblGenreGroup_paper = Paper
+
+ViewItemOverview_lblGenreGroup_other = Other
 
 #
 # ViewItemFull
