Resolved [PUBMAN-2583] - Add item handle to the view item page
Former-commit-id: c5386ae02cb8ff3414bffdaa5a5aa30692c5c90a

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -852,7 +852,9 @@ ViewItemFull_lblAll = alle
 
 ViewItemFull_lblAlternativeTitle = Alternativer Titel
 
-ViewItemFull_lblCiteItemAs = Datensatz zitieren als
+ViewItemFull_lblCiteItemAs = F\u00FChrt zu der aktuellsten f\u00FCr Sie verf\u00FCgbaren Version dieser Publikation. Abh\u00E4ngig vom Status der j\u00FCngsten Version und Ihren Nutzerrechten k\u00F6nnen dies unterschiedliche Versionen sein.
+
+ViewItemFull_lblCiteItemVersionAs = F\u00FChrt dauerhaft zu dieser Version der Publikation.
 
 ViewItemFull_lblCreator = Urheber
 
