--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -852,7 +852,9 @@ ViewItemFull_lblAll = all
 
 ViewItemFull_lblAlternativeTitle = Alternative Title
 
-ViewItemFull_lblCiteItemAs = Cite this Item as
+ViewItemFull_lblCiteItemAs = Always points to the most recent version of this publication, which is accessible with your user rights. Depending on the status of the actual version you may directed to different versions.
+
+ViewItemFull_lblCiteItemVersionAs = Always points to this version of the publication.
 
 ViewItemFull_lblCreator = Creator
 
