--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1212,7 +1212,9 @@ ViewItemFull_lblAlternativeTitle = Alternativer Titel
 
 ViewItemFull_lblBasic = Basisdaten
 
-ViewItemFull_lblCiteItemAs = Permalink
+ViewItemFull_lblCiteItemAs = Datensatz-Permalink
+
+ViewItemFull_lblCiteItemVersionAs = Versions-Permalink
 
 ViewItemFull_lblCreateItemFromTemplate = Als Vorlage verwenden
 
