--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1212,7 +1212,9 @@ ViewItemFull_lblAlternativeTitle = Alternative Title
 
 ViewItemFull_lblBasic = Basic
 
-ViewItemFull_lblCiteItemAs = Permalink
+ViewItemFull_lblCiteItemAs = Item Permalink
+
+ViewItemFull_lblCiteItemVersionAs = Version Permalink
 
 ViewItemFull_lblCreateItemFromTemplate = Use item as template
 
