--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -845,7 +845,9 @@ ViewItemFull_lblAll = todos
 
 ViewItemFull_lblAlternativeTitle = T\uFFFDtulo Alternativo
 
-ViewItemFull_lblCiteItemAs = Citar este Item como
+ViewItemFull_lblCiteItemAs = Always points to the most recent version of this publication, which is accessible with your user rights. Depending on the status of the actual version you may directed to different versions.
+
+ViewItemFull_lblCiteItemVersionAs = Always points to this version of the publication.
 
 ViewItemFull_lblCreator = Creador
 
