--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -1200,7 +1200,9 @@ ViewItemFull_lblAlternativeTitle = T\u00EDtulo Alternativo
 
 ViewItemFull_lblBasic = B\u00E1sico
 
-ViewItemFull_lblCiteItemAs = Permalink
+ViewItemFull_lblCiteItemAs = Item Permalink
+
+ViewItemFull_lblCiteItemVersionAs = Version Permalink
 
 ViewItemFull_lblCreateItemFromTemplate = Usar item como plantilla
 
