[INGE-700] - OA Status "Not specified" and new option "Closed Access"

--- a/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -1111,6 +1111,8 @@ ViewItem_btnPreviousItem1 = < voriger Datensatz
 #
 # ViewItem
 #
+ViewItem_imgOa_closed_access = Closed Access
+
 ViewItem_imgOa_gold = Open Access Gold
 
 ViewItem_imgOa_green = Open Access Gr\u00FCn
