--- a/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -1111,6 +1111,8 @@ ViewItem_btnPreviousItem1 = < previous item
 #
 # ViewItem
 #
+ViewItem_imgOa_closed_access = Closed Access
+
 ViewItem_imgOa_gold = Open Access Gold
 
 ViewItem_imgOa_green = Open Access Green
