--- a/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -1109,6 +1109,8 @@ ViewItem_btnPreviousItem1 = < \u524D\u306E\u30A2\u30A4\u30C6\u30E0
 #
 # ViewItem
 #
+ViewItem_imgOa_closed_access = Closed Access
+
 ViewItem_imgOa_gold = Open Access Gold
 
 ViewItem_imgOa_green = Open Access Green
