--- a/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -640,6 +640,8 @@ ENUM_LOGICOPTIONS_LOGIC_NOT = NOT
 
 ENUM_LOGICOPTIONS_LOGIC_OR = OR
 
+ENUM_OA_STATUS_CLOSED_ACCESS = Closed Access
+
 ENUM_OA_STATUS_GOLD = Gold
 
 ENUM_OA_STATUS_GREEN = Green
