--- a/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -586,6 +586,8 @@ ENUM_IDENTIFIERTYPE_REPORT_NR = Reportnr.
 
 ENUM_IDENTIFIERTYPE_RESEARCHTK = Research topic keyword
 
+ENUM_IDENTIFIERTYPE_RIFSPROJECT = RIFSPROJECT
+
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
 ENUM_IDENTIFIERTYPE_URI = URI
