--- a/pubman_presentation/src/main/resources/rifs/Label_de.properties
+++ b/pubman_presentation/src/main/resources/rifs/Label_de.properties
@@ -27,7 +27,7 @@
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
-ENUM_GENRE_CASE_NOTE = IASS Blogpost
+ENUM_GENRE_CASE_NOTE = RIFS Blogpost
 
 ENUM_GENRE_COMMENTARY = Datenpublikation
 
@@ -35,13 +35,13 @@ ENUM_GENRE_FESTSCHRIFT = Software
 
 ENUM_GENRE_NEWSPAPER_ARTICLE = Gastbeitrag
 
-Home_Header_News = Aktuelles von IASSpublic
+Home_Header_News = Aktuelles von RIFSpublic
 
-Pubman_browserTitle = IASSpublic
+Pubman_browserTitle = RIFSpublic
 
-Pubman_descriptionMetaTag = IASSpublic -  eine IASS L\u00F6sung f\u00FCr das Publikationsdaten-Management
+Pubman_descriptionMetaTag = RIFSpublic -  eine RIFS L\u00F6sung f\u00FCr das Publikationsdaten-Management
 
-ViewItemFull_lblSocialBookmarkingDescription = IASSpublic:
+ViewItemFull_lblSocialBookmarkingDescription = RIFSpublic:
 
 ViewItemOverview_lblSpecificAuthorsSection = Urheber*innen
 
@@ -61,4 +61,4 @@ dateOptionAny = Irgendein Jahr
 
 item_date-issued = Final ver\u00F6ffentlicht
 
-openSearch_shortDesc = IASSpublic
+openSearch_shortDesc = RIFSpublic
