--- a/pubman_presentation/src/main/resources/rifs/Label_ja.properties
+++ b/pubman_presentation/src/main/resources/rifs/Label_ja.properties
@@ -22,11 +22,11 @@
 #
 #
 # Copyright 2006-2012 Fachinformationszentrum Karlsruhe Gesellschaft
-# f?r wissenschaftlich-technische Information mbH and Max-Planck-
-# Gesellschaft zur F?rderung der Wissenschaft e.V.
+# f\u00FCr wissenschaftlich-technische Information mbH and Max-Planck-
+# Gesellschaft zur F\u00F6rderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
-ENUM_GENRE_CASE_NOTE = IASS Blogpost
+ENUM_GENRE_CASE_NOTE = RIFS Blogpost
 
 ENUM_GENRE_COMMENTARY = Data Publication
 
@@ -34,13 +34,13 @@ ENUM_GENRE_FESTSCHRIFT = Software
 
 ENUM_GENRE_NEWSPAPER_ARTICLE = Guest Contribution
 
-Home_Header_News = Latest News on IASSpublic
+Home_Header_News = Latest News on RIFSpublic
 
-Pubman_browserTitle = IASSpublic
+Pubman_browserTitle = RIFSpublic
 
-Pubman_descriptionMetaTag = IASSpublic - a IASS solution for publication data management
+Pubman_descriptionMetaTag = RIFSpublic - a RIFS solution for publication data management
 
-ViewItemFull_lblSocialBookmarkingDescription = IASSpublic:
+ViewItemFull_lblSocialBookmarkingDescription = RIFSpublic:
 
 ViewItemOverview_lblSpecificAuthorsSection = Authors
 
@@ -52,6 +52,8 @@ ViewItem_lblPublicationState_published-in-print = Finally published
 
 actionMenu_sendOAMail = Send OpenAccess eMail
 
+adv_search_lblChkGenre_festschrift = Software
+
 adv_search_lblChkType_abb_publishedpr = finally published 
 
 adv_search_lblChkType_publishedpr = finally published 
@@ -60,4 +62,4 @@ dateOptionAny = Any date
 
 item_date-issued = Finally published 
 
-openSearch_shortDesc = IASSpublic
+openSearch_shortDesc = RIFSpublic
