INGE-698 Additional ID types: bioRxiv & chemRxiv & more

--- a/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman_presentation/src/main/resources/Messages_de.properties
@@ -154,7 +154,7 @@ IncorrectDDCClassification = Der eingegebene Wert entspricht nicht der DDC Klass
 
 IncorrectISO6393Classification = Der eingegebene Wert entspricht nicht der ISO639 3 Klassifizierung.
 
-IncorrectIdDoiFormat = Bitte tragen Sie die DOI ohne DOI-Resolver (https://doi.org/) ein.
+IncorrectIdDoiFormat = Bitte tragen Sie den Wert ohne DOI-Resolver (https://doi.org/) ein.
 
 IncorrectJELClassification = Der eingegebene Wert entspricht nicht der JEL Klassifizierung.
 
@@ -350,11 +350,11 @@ ViewItemOverview_noFullTextsAvailable = Es sind keine frei zug\u00E4nglichen Vol
 
 ViewItemOverview_noMpgAuthorsAvailable = Es sind keine MPG-Autoren in der Publikation vorhanden
 
+ViewItemOverview_noRestrictedFullTextsAvailable = F\u00FCr Ihren IP-Bereich sind aktuell keine Volltexte freigegeben.
+
 ViewItemOverview_noSpecificAuthorsAvailable = Es sind keine Autoren verf\u00FCgbar
 
 ViewItemOverview_noSupplementaryMaterialAvailable = Es sind keine frei zug\u00E4nglichen Erg\u00E4nzenden Materialien verf\u00FCgbar
-
-ViewItemOverview_noRestrictedFullTextsAvailable = F\u00FCr Ihren IP-Bereich sind aktuell keine Volltexte freigegeben.
 
 ViewItem_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
