--- a/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman_presentation/src/main/resources/Messages_en.properties
@@ -156,7 +156,7 @@ IncorrectDDCClassification = The entered value is not conform to the DDC classif
 
 IncorrectISO6393Classification = The entered value is not conform to the given classification.
 
-IncorrectIdDoiFormat = Please enter the DOI without DOI resolver (https://doi.org/).
+IncorrectIdDoiFormat = Please enter the value without DOI resolver (https://doi.org/).
 
 IncorrectJELClassification = The entered value is not conform to the JEL classification. 
 
@@ -352,11 +352,11 @@ ViewItemOverview_noFullTextsAvailable = There are no public fulltexts stored in 
 
 ViewItemOverview_noMpgAuthorsAvailable = There are no MPG-Authors in the publication available
 
+ViewItemOverview_noRestrictedFullTextsAvailable = There are currently no full texts shared for your IP range.
+
 ViewItemOverview_noSpecificAuthorsAvailable = There are no Authors available
 
 ViewItemOverview_noSupplementaryMaterialAvailable = There is no public supplementary material available
-
-ViewItemOverview_noRestrictedFullTextsAvailable = There are currently no full texts shared for your IP range.
 
 ViewItem_deleteConfirmation = Do you really want to delete this item?
 
