--- a/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -152,7 +152,7 @@ IncorrectDDCClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uF
 
 IncorrectISO6393Classification = \u5206\u985E\u4F53\u7CFB\uFF08\u4E3B\u984C\uFF09\u306B\u5165\u529B\u3055\u308C\u305F\u30AD\u30FC\u30EF\u30FC\u30C9\u306E\u66F8\u5F0F\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
 
-IncorrectIdDoiFormat = Please enter the DOI without DOI resolver (https://doi.org/).
+IncorrectIdDoiFormat = Please enter the value without DOI resolver (https://doi.org/).
 
 IncorrectJELClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uFF08JEL\uFF09\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 
@@ -348,11 +348,11 @@ ViewItemOverview_noFullTextsAvailable = \u516C\u958B\u3055\u308C\u3066\u3044\u30
 
 ViewItemOverview_noMpgAuthorsAvailable = There are no MPG-Authors in the publication available
 
+ViewItemOverview_noRestrictedFullTextsAvailable = There are currently no full texts shared for your IP range.
+
 ViewItemOverview_noSpecificAuthorsAvailable = There are no Authors available
 
 ViewItemOverview_noSupplementaryMaterialAvailable = There is no public supplementary material available
-
-ViewItemOverview_noRestrictedFullTextsAvailable = There are currently no full texts shared for your IP range.
 
 ViewItem_deleteConfirmation = \u672C\u5F53\u306B\u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u524A\u9664\u3057\u3066\u3082\u3088\u308D\u3057\u3044\u3067\u3059\u304B?
 
