--- a/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -568,15 +568,30 @@ ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex Citekey
 
+#Jus-specific Publication types END
+ENUM_IDENTIFIERTYPE_BIORXIV = bioRxiv
+
 ENUM_IDENTIFIERTYPE_BMC = BMC
+
+#Jus-specific Publication types END
+ENUM_IDENTIFIERTYPE_CHEMRXIV = ChemRxiv
 
 ENUM_IDENTIFIERTYPE_CONE = CoNE
 
 ENUM_IDENTIFIERTYPE_DOI = DOI
 
+#Jus-specific Publication types END
+ENUM_IDENTIFIERTYPE_EARTHARXIV = EarthArXiv
+
+#Jus-specific Publication types END
+ENUM_IDENTIFIERTYPE_EDARXIV = EdArXiv
+
 ENUM_IDENTIFIERTYPE_EDOC = eDoc
 
 ENUM_IDENTIFIERTYPE_ESCIDOC = eSciDoc
+
+#Jus-specific Publication types END
+ENUM_IDENTIFIERTYPE_ESS_OPEN_ARCHIVE = ESS Open Archive
 
 ENUM_IDENTIFIERTYPE_ISBN = ISBN
 
@@ -585,6 +600,9 @@ ENUM_IDENTIFIERTYPE_ISI = ISI
 ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_MDB_ID = MDB-ID
+
+#Jus-specific Publication types END
+ENUM_IDENTIFIERTYPE_MEDRXIV = medRxiv
 
 ENUM_IDENTIFIERTYPE_MODELMETHOD = Model / method
 
@@ -608,6 +626,9 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
+#Jus-specific Publication types END
+ENUM_IDENTIFIERTYPE_PSYARXIV = PsyArXiv
+
 ENUM_IDENTIFIERTYPE_PUBLISHER = Publisher
 
 ENUM_IDENTIFIERTYPE_REGIONALK = Regional keyword
@@ -615,6 +636,12 @@ ENUM_IDENTIFIERTYPE_REGIONALK = Regional keyword
 ENUM_IDENTIFIERTYPE_REPORT_NR = Report Nr.
 
 ENUM_IDENTIFIERTYPE_RESEARCHTK = Research topic keyword
+
+#Jus-specific Publication types END
+ENUM_IDENTIFIERTYPE_RESEARCH_SQUARE = Research Square
+
+#Jus-specific Publication types END
+ENUM_IDENTIFIERTYPE_SOCARXIV = SocArXiv
 
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
