--- a/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -549,15 +549,25 @@ ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex\u53C2\u7167ID
 
+ENUM_IDENTIFIERTYPE_BIORXIV = bioRxiv
+
 ENUM_IDENTIFIERTYPE_BMC = BMC
+
+ENUM_IDENTIFIERTYPE_CHEMRXIV = ChemRxiv
 
 ENUM_IDENTIFIERTYPE_CONE = CoNE
 
 ENUM_IDENTIFIERTYPE_DOI = DOI
 
+ENUM_IDENTIFIERTYPE_EARTHARXIV = EarthArXiv
+
+ENUM_IDENTIFIERTYPE_EDARXIV = EdArXiv
+
 ENUM_IDENTIFIERTYPE_EDOC = eDoc
 
 ENUM_IDENTIFIERTYPE_ESCIDOC = eSciDoc
+
+ENUM_IDENTIFIERTYPE_ESS_OPEN_ARCHIVE = ESS Open Archive
 
 ENUM_IDENTIFIERTYPE_ISBN = ISBN
 
@@ -566,6 +576,8 @@ ENUM_IDENTIFIERTYPE_ISI = ISI
 ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_MDB_ID = MDB-ID
+
+ENUM_IDENTIFIERTYPE_MEDRXIV = medRxiv
 
 ENUM_IDENTIFIERTYPE_MODELMETHOD = Model / method
 
@@ -589,6 +601,8 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
+ENUM_IDENTIFIERTYPE_PSYARXIV = PsyArXiv
+
 ENUM_IDENTIFIERTYPE_PUBLISHER = Publisher
 
 ENUM_IDENTIFIERTYPE_REGIONALK = Regional keyword
@@ -596,6 +610,10 @@ ENUM_IDENTIFIERTYPE_REGIONALK = Regional keyword
 ENUM_IDENTIFIERTYPE_REPORT_NR = Reportnr.
 
 ENUM_IDENTIFIERTYPE_RESEARCHTK = Research topic keyword
+
+ENUM_IDENTIFIERTYPE_RESEARCH_SQUARE = Research Square
+
+ENUM_IDENTIFIERTYPE_SOCARXIV = SocArXiv
 
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
