[INGE-713] - Change Labels for Date published in Print to Issued

--- a/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1335,7 +1335,7 @@ ViewItemFull_lblDateCreated = Created,
 
 ViewItemFull_lblDateModified = Modified, 
 
-ViewItemFull_lblDatePublishedInPrint = Publ. in Print, 
+ViewItemFull_lblDatePublishedInPrint = Issued, 
 
 ViewItemFull_lblDatePublishedOnline = Published Online, 
 
@@ -1718,7 +1718,7 @@ ViewItemShort_lblDateCreated = Created
 
 ViewItemShort_lblDateModified = Modified
 
-ViewItemShort_lblDatePublishedInPrint = Published in Print
+ViewItemShort_lblDatePublishedInPrint = Issued
 
 ViewItemShort_lblDatePublishedOnline = Published online
 
@@ -1784,7 +1784,7 @@ ViewItem_lblDateModified1 = Date modified:
 
 ViewItem_lblDatePublished1 = Date published:
 
-ViewItem_lblDatePublishedInPrint = Published in Print
+ViewItem_lblDatePublishedInPrint = Date Issued
 
 ViewItem_lblDatePublishedOnline = Published Online
 
@@ -1827,7 +1827,7 @@ ViewItem_lblPublicationState_accepted = Accepted / In Press
 
 ViewItem_lblPublicationState_not-specified = Not specified
 
-ViewItem_lblPublicationState_published-in-print = Published in print
+ViewItem_lblPublicationState_published-in-print = Issued
 
 ViewItem_lblPublicationState_published-online = Published online
 
@@ -2141,7 +2141,7 @@ adv_search_lblChkType_abb_event_end_date = end of event
 
 adv_search_lblChkType_abb_event_start_date = start of event
 
-adv_search_lblChkType_abb_publishedpr = published in print
+adv_search_lblChkType_abb_publishedpr = issued
 
 adv_search_lblChkType_accepted = accepted
 
@@ -2155,7 +2155,7 @@ adv_search_lblChkType_modified = modified
 
 adv_search_lblChkType_publishedon = published online
 
-adv_search_lblChkType_publishedpr = published in print
+adv_search_lblChkType_publishedpr = issued
 
 adv_search_lblChkType_submitted = submitted
 
@@ -2307,7 +2307,7 @@ confirmSelection = Confirm Selection
 
 creator_type = Type
 
-dateOptionAny = Any date (published in print, submitted, etc.)
+dateOptionAny = Any date (issued, submitted, etc.)
 
 dateOptionPublished = The date of publication only 
 
@@ -2590,7 +2590,7 @@ item_date-accepted = Date accepted
 
 item_date-created = Date created
 
-item_date-issued = Date published in print
+item_date-issued = Date issued
 
 item_date-modified = Date modified
 
