--- a/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1335,7 +1335,7 @@ ViewItemFull_lblDateCreated = Erstellt,
 
 ViewItemFull_lblDateModified = Ge\u00E4ndert, 
 
-ViewItemFull_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht, 
+ViewItemFull_lblDatePublishedInPrint = Erschienen, 
 
 ViewItemFull_lblDatePublishedOnline = Online ver\u00F6ffentlicht, 
 
@@ -1717,7 +1717,7 @@ ViewItemShort_lblDateCreated = Erstellt
 
 ViewItemShort_lblDateModified = Ge\u00E4ndert
 
-ViewItemShort_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht
+ViewItemShort_lblDatePublishedInPrint = Erschienen
 
 ViewItemShort_lblDatePublishedOnline = Online ver\u00F6ffentlicht
 
@@ -1783,7 +1783,7 @@ ViewItem_lblDateModified1 = \u00C4nderungsdatum:
 
 ViewItem_lblDatePublished1 = Erscheinungsdatum:
 
-ViewItem_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht
+ViewItem_lblDatePublishedInPrint = Erschienen
 
 ViewItem_lblDatePublishedOnline = Online ver\u00F6ffentlicht
 
@@ -1826,7 +1826,7 @@ ViewItem_lblPublicationState_accepted = Angenommen
 
 ViewItem_lblPublicationState_not-specified = Keine Angabe
 
-ViewItem_lblPublicationState_published-in-print = Im Druck ver\u00F6ffentlicht
+ViewItem_lblPublicationState_published-in-print = Erschienen
 
 ViewItem_lblPublicationState_published-online = Online ver\u00F6ffentlicht
 
@@ -2052,7 +2052,7 @@ adv_search_lblChkType_abb_event_end_date = Veranstalt.ende
 
 adv_search_lblChkType_abb_event_start_date = Veranstalt.beginn
 
-adv_search_lblChkType_abb_publishedpr = im Druck ver\u00F6ff.
+adv_search_lblChkType_abb_publishedpr = Erschienen
 
 adv_search_lblChkType_accepted = angenommen
 
@@ -2066,7 +2066,7 @@ adv_search_lblChkType_modified = modifiziert
 
 adv_search_lblChkType_publishedon = online ver\u00F6ffentlicht
 
-adv_search_lblChkType_publishedpr = im Druck ver\u00F6ffentlicht
+adv_search_lblChkType_publishedpr = Erschienen
 
 adv_search_lblChkType_submitted = eingereicht
 
@@ -2498,7 +2498,7 @@ item_date-accepted = Annahmedatum
 
 item_date-created = Erstellungsdatum
 
-item_date-issued = Ver\u00F6ffentlicht im Druck
+item_date-issued = Erschienen
 
 item_date-modified = \u00C4nderungsdatum
 
