[INGE-718] - Add. information in the release confirmation page

--- a/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman_presentation/src/main/resources/Messages_de.properties
@@ -815,6 +815,12 @@ search_ParseError = Der Suchausdruck enth\u00E4lt unzul\u00E4ssige Zeichen z. B.
 
 search_TechnicalError = Technischer Fehler bei der Bearbeitung der Suche aufgetreten
 
+ReleaseItem_ExportControlPart1 = Wenn Sie Dokumente \u00F6ffentlich zug\u00E4nglich machen, dann stellen Sie bitte sicher, dass Sie die
+
+ReleaseItem_ExportControlLinkText = rechtlichen Vorgaben
+
+ReleaseItem_ExportControlPart2 = für die Exportkontrolle von wissenschaftlichen Publikationen durch das Bundesamt für Wirtschaft und Ausfuhrkontrolle vorab gepr\u00FCft haben.
+
 toolsOverview = Hier finden Sie eine \u00DCbersicht \u00FCber die verf\u00FCgbaren Werkzeuge und Schnittstellen. 
 
 userAccountOptions_ChangePasswordNotPossible = Sie k\u00F6nnen Ihr Passwort nur 1x pro Sitzung \u00E4ndern. Bitte loggen Sie sich zun\u00E4chst aus und danach wieder ein.
