--- a/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman_presentation/src/main/resources/Messages_en.properties
@@ -817,6 +817,12 @@ search_ParseError = Search expression contains illegal characters e. g. ", * or 
 
 search_TechnicalError = Technical error while processing the search query
 
+ReleaseItem_ExportControlPart1 = If you are sharing publicly available documents, then please make sure you have checked the
+
+ReleaseItem_ExportControlLinkText = legal specifications
+
+ReleaseItem_ExportControlPart2 = regarding export control for academic publications by the German Federal Office for Economic Affairs and Export Control in advance.
+
 toolsOverview = Here is an overview of the available tools and interfaces.
 
 userAccountOptions_ChangePasswordNotPossible = You can change your password only 1x per session. Please log out first and then log in again.
