--- a/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -817,6 +817,12 @@ search_ParseError = \u691C\u7D22\u30AF\u30A8\u30EA\u306B\u8A31\u53EF\u3055\u308C
 
 search_TechnicalError = \u691C\u7D22\u30AF\u30A8\u30EA\u3092\u51E6\u7406\u4E2D\u306B\u30A8\u30E9\u30FC\u304C\u767A\u751F\u3057\u307E\u3057\u305F
 
+ReleaseItem_ExportControlPart1 = If you are sharing publicly available documents, then please make sure you have checked the
+
+ReleaseItem_ExportControlLinkText = legal specifications
+
+ReleaseItem_ExportControlPart2 = regarding export control for academic publications by the German Federal Office for Economic Affairs and Export Control in advance.
+
 toolsOverview = PubMan\u3067\u4F7F\u3048\u308B\u8FFD\u52A0\u30B5\u30FC\u30D3\u30B9\u3067\u3059\u3002
 
 userAccountOptions_ChangePasswordNotPossible = You can change your password only 1x per session. Please log out first and then log in again.
