--- a/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1139,6 +1139,8 @@ ReleaseItemPage = Datensatz freigeben
 
 ReleaseItem_lblComment = Kommentar zur Freigabe
 
+ReleaseItem_ExportControl = Exportkontrolle
+
 ReleaseItem_lnkRelease = Freigeben
 
 #
