--- a/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1139,6 +1139,8 @@ ReleaseItemPage = Release Item
 
 ReleaseItem_lblComment = Release Comment
 
+ReleaseItem_lblExport = Export Control
+
 ReleaseItem_lnkRelease = Release
 
 #
