[INGE-718] - Add. information in the release confirmation page

--- a/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1166,6 +1166,8 @@ ReleaseItemPage = Release Item
 
 ReleaseItem_lblComment = Release Comment
 
+ReleaseItem_lblExport = Export Control
+
 ReleaseItem_lnkRelease = Release
 
 #
