--- a/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -1334,7 +1334,7 @@ ViewItemFull_lblDateCreated = \u4F5C\u6210\u65E5,
 
 ViewItemFull_lblDateModified = \u6539\u8A02\u65E5, 
 
-ViewItemFull_lblDatePublishedInPrint = \u7D19\u7248\u51FA\u7248\u65E5, 
+ViewItemFull_lblDatePublishedInPrint = \u51FA\u7248, 
 
 ViewItemFull_lblDatePublishedOnline = \u30AA\u30F3\u30E9\u30A4\u30F3\u7248\u51FA\u7248\u65E5, 
 
@@ -1714,7 +1714,7 @@ ViewItemShort_lblDateCreated = \u4F5C\u6210
 
 ViewItemShort_lblDateModified = \u4FEE\u6B63
 
-ViewItemShort_lblDatePublishedInPrint = \u767A\u884C
+ViewItemShort_lblDatePublishedInPrint = \u51FA\u7248
 
 ViewItemShort_lblDatePublishedOnline = \u30AA\u30F3\u30E9\u30A4\u30F3\u51FA\u7248
 
@@ -1780,7 +1780,7 @@ ViewItem_lblDateModified1 = \u4FEE\u6B63\u65E5:
 
 ViewItem_lblDatePublished1 = \u7D19\u7248\u51FA\u7248\u65E5:
 
-ViewItem_lblDatePublishedInPrint = \u7D19\u7248\u51FA\u7248
+ViewItem_lblDatePublishedInPrint = \u51FA\u7248
 
 ViewItem_lblDatePublishedOnline = \u30AA\u30F3\u30E9\u30A4\u30F3\u51FA\u7248
 
@@ -1823,7 +1823,7 @@ ViewItem_lblPublicationState_accepted = \u53D7\u7406 / \u5370\u5237\u4E2D
 
 ViewItem_lblPublicationState_not-specified = \u4E0D\u660E
 
-ViewItem_lblPublicationState_published-in-print = \u7D19\u5A92\u4F53\u3067\u51FA\u7248\u6E08\u307F
+ViewItem_lblPublicationState_published-in-print = \u51FA\u7248
 
 ViewItem_lblPublicationState_published-online = \u30AA\u30F3\u30E9\u30A4\u30F3\u3067\u51FA\u7248\u6E08\u307F
 
@@ -2044,7 +2044,7 @@ adv_search_lblChkType_abb_event_end_date = \u30A4\u30D9\u30F3\u30C8\u7D42\u4E86\
 
 adv_search_lblChkType_abb_event_start_date = \u30A4\u30D9\u30F3\u30C8\u958B\u59CB\u65E5
 
-adv_search_lblChkType_abb_publishedpr = \u7D19\u7248\u51FA\u7248\u65E5
+adv_search_lblChkType_abb_publishedpr = \u51FA\u7248
 
 adv_search_lblChkType_accepted = \u53D7\u7406\u65E5
 
@@ -2058,7 +2058,7 @@ adv_search_lblChkType_modified = \u6539\u8A02\u65E5
 
 adv_search_lblChkType_publishedon = \u30AA\u30F3\u30E9\u30A4\u30F3\u51FA\u7248\u65E5
 
-adv_search_lblChkType_publishedpr = \u7D19\u7248\u51FA\u7248\u65E5
+adv_search_lblChkType_publishedpr = \u51FA\u7248
 
 adv_search_lblChkType_submitted = \u6295\u7A3F\u65E5
 
