[INGE-699] - Update the ID type mapping for CSL export

--- a/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1166,7 +1166,7 @@ ReleaseItemPage = Release Item
 
 ReleaseItem_lblComment = Release Comment
 
-ReleaseItem_lblExport = Export Control
+ReleaseItem_ExportControl = Export Control
 
 ReleaseItem_lnkRelease = Release
 
