--- a/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -1139,7 +1139,7 @@ ReleaseItemPage = \u30A2\u30A4\u30C6\u30E0\u516C\u958B
 
 ReleaseItem_lblComment = \u516C\u958B\u30B3\u30E1\u30F3\u30C8
 
-ReleaseItem_lblExport = Export Control
+ReleaseItem_ExportControl  = Export Control
 
 ReleaseItem_lnkRelease = \u516C\u958B
 
