[INGE-692] - magazine article (no im-/export)

--- a/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -503,6 +503,8 @@ ENUM_GENRE_ISSUE = Heft
 
 ENUM_GENRE_JOURNAL = Zeitschrift
 
+ENUM_GENRE_MAGAZINE_ARTICLE = Magazine Article
+
 ENUM_GENRE_MANUAL = Leitfaden
 
 ENUM_GENRE_MANUSCRIPT = Manuskript
