--- a/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -491,6 +491,8 @@ ENUM_GENRE_ISSUE = \u7279\u96C6\u53F7
 
 ENUM_GENRE_JOURNAL = \u5B66\u8853\u96D1\u8A8C
 
+ENUM_GENRE_MAGAZINE_ARTICLE = Magazine Article
+
 ENUM_GENRE_MANUAL = \u30DE\u30CB\u30E5\u30A2\u30EB
 
 ENUM_GENRE_MANUSCRIPT = \u8349\u7A3F
