Bugfix Encoding and adjustment for Link target

--- a/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman_presentation/src/main/resources/Messages_de.properties
@@ -819,7 +819,7 @@ ReleaseItem_ExportControlPart1 = Wenn Sie Dokumente \u00F6ffentlich zug\u00E4ngl
 
 ReleaseItem_ExportControlLinkText = rechtlichen Vorgaben
 
-ReleaseItem_ExportControlPart2 = für die Exportkontrolle von wissenschaftlichen Publikationen durch das Bundesamt für Wirtschaft und Ausfuhrkontrolle vorab gepr\u00FCft haben.
+ReleaseItem_ExportControlPart2 = f\u00FCr die Exportkontrolle von wissenschaftlichen Publikationen durch das Bundesamt f\u00FCr Wirtschaft und Ausfuhrkontrolle vorab gepr\u00FCft haben.
 
 toolsOverview = Hier finden Sie eine \u00DCbersicht \u00FCber die verf\u00FCgbaren Werkzeuge und Schnittstellen. 
 
