--- a/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -2529,7 +2529,7 @@ item_date-accepted = Annahmedatum
 
 item_date-created = Erstellungsdatum
 
-item_date-issued = item_date-issued
+item_date-issued = Erschienen
 
 item_date-modified = \u00C4nderungsdatum
 
